--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+env:
+  global:
+    - CONAN_USERNAME: "ppodsiadly"
+    - CONAN_LOGIN_USERNAME: "ppodsiadly"
+    - CONAN_UPLOAD: "https://api.bintray.com/conan/ppodsiadly/conan"
+    - CONAN_STABLE_BRANCH_PATTERN: "stable/*"
+    - CONAN_UPLOAD_ONLY_WHEN_STABLE: 0
+
 linux: &linux
    os: linux
    sudo: required
@@ -5,9 +13,11 @@ linux: &linux
    python: "3.6"
    services:
      - docker
+
 osx: &osx
    os: osx
    language: generic
+
 matrix:
    include:
       - <<: *linux
